3rd attempt to fix blurry mobile background

--- a/css/style.css
+++ b/css/style.css
@@ -338,8 +338,8 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     background:url("../images/tool.jpg");
     /*background-attachment: fixed;*/
-    background-position: center;
-    background-repeat: no-repeat;
+    background-position: center center;
+    
     /*background-size: cover;*/
     color: #fff;
     position: relative;
